force-app/main/default/objects/ssot__FlowElementRun__dlm/fields/ssot__ErrorDescriptionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ErrorDescriptionText__c</fullName>
    <label>Error Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ErrorDescriptionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>