force-app/main/default/objects/ssot__FlowElementRun__dlm/fields/ssot__ErrorReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__ErrorReason__c</fullName>
    <label>Error Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ErrorReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>