force-app/main/default/objects/ssot__FlowElementRun__dlm/fields/ssot__OutcomeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeId__c</fullName>
    <label>Outcome</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>