force-app/main/default/objects/ssot__FlowElementRun__dlm/fields/ssot__rel_1697761222359_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761222359_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowElementRun_FlowElementId_map_Flo_rel</label>
    <referenceTo>ssot__FlowElement__dlm</referenceTo>
    <relationshipLabel>FlowElementRun_FlowElementId_map_Flo_rel</relationshipLabel>
    <relationshipName>rel_1697761222359_end</relationshipName>
    <type>Lookup</type>
</CustomField>